Mongoose schema created. Launch server file renamed.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "conuhacks19",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/simawn/conuhacks19#readme",
   "dependencies": {
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongoose": "^5.4.6"
   }
